Refactor: stop using java.util.Date and use OffsetDateTime
java.util.Date is *REALLY* old, stop using this and instead
use the moder java.time.* API, which is actually decent, and
allows us to localize stuff aswell.

Signed-off-by: kodehawa <david.alejandro.rubio@gmail.com>